# cast-monorepo

./: .gitignore  README.md  pyproject.toml
.cast/: config.yaml  syncstate.json
apps/cast-cli/: pyproject.toml
apps/cast-cli/cast_cli/: __init__.py  __main__.py  cli.py  gdoc.py  tui.py  tui_plugin.py
apps/cast-tui/: pyproject.toml
docs/: CODEBASE.md  GDOC.md  TESTING.md  TUI.md
docs/cast/: (Project) Cast Sync . MVP Release.md  3b7c36ff-4293-4493-8be9-2de09625e880.md  Cast Monorepo Features.md  Hello.md  README.md  Test Artifact.md  Testasldjfljds.md  Yay.md
example/test1/: .gitignore
example/test1/.cast/: config.yaml  syncstate.json
example/test1/.cast/conflicts/: test-note~test-note-123~PEER-test2.md
example/test1/01 Vault/: test-note.md
example/test2/.cast/: config.yaml  syncstate.json
example/test2/.cast/conflicts/: anothertest~dd31af9a-a280-4e81-9d6a-458a62655208~LOCAL.md
example/test2/01 Vault/: anothertest.md  casttest.md
example/test3/.cast/: config.yaml  syncstate.json
example/test4/.cast/: config.yaml  syncstate.json
example/vault1/.cast/: config.yaml  syncstate.json
example/vault1/01 Vault/: test.md
example/vault2/.cast/: config.yaml
libs/cast-core/: pyproject.toml
libs/cast-core/cast_core/: __init__.py  models.py  registry.py  yamlio.py
libs/cast-git/: pyproject.toml
libs/cast-sync/: pyproject.toml
libs/cast-sync/cast_sync/: __init__.py  cbsync.py  conflict.py  hsync.py  index.py  rename.py
scripts/: make_sandbox.py
tests/: test_cli_e2e.py  test_digest.py  test_rename.py  test_rename_simple.py  test_sync.py
tests/framework/: files.py  sandbox.py
tests/integration/: test_cbsync.py  test_conflicts_and_modes.py  test_hsync_rename_rewrites_links.py
tests/unit/: test_rename_links.py
