[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cast-cli"
version = "0.1.4"
description = "CLI for Cast Sync"
requires-python = ">=3.10"
dependencies = [
    "cast-core",
    "cast-sync",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0",
    "google-api-python-client>=2.131.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
cast-core = { workspace = true }
cast-sync = { workspace = true }

[project.scripts]
cast = "cast_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0"
]

# Google Docs integration is now included by default