[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cast-sync"
version = "0.1.6"
description = "Sync engine for Cast - 3-way sync and conflict handling"
requires-python = ">=3.10"
dependencies = [
    "cast-core",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
cast-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0"
]